[B] Fix 'jumping' i18n icon

--- a/app/globals.css
+++ b/app/globals.css
@@ -99,3 +99,7 @@ u {
   font-size: revert;
   font-weight: revert;
 }
+
+.toggle-menu{
+  width: 1rem;
+}
